<resources>
    <string name="app_name">CemeteryTrackerV1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="welcome_to_cemetery_tracker">Welcome to Cemetery Tracker</string>
    <string name="cemeteries">Cemeteries</string>
    <string name="location">Location</string>
    <string name="addcemfab">addCemFAB</string>
    <string name="cem_name_hint">Cemetery Name</string>
    <string name="state_hint">State</string>
    <string name="address">Address</string>
    <string name="county">County</string>
    <string name="description">Description</string>
    <string name="townShip">Township</string>
    <string name="cemRange">Cemetery Range</string>
    <string name="cemSpot">Cemetery Spot</string>
    <string name="cemSection">Cemetery Section</string>
    <string name="cemFirstYear">Cemetery First Year</string>
    <string name="add_cemetery">Add Cemetery</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="birth_date">Birth date</string>
    <string name="death_date">Death date</string>
    <string name="marriage_year">Marriage year</string>
    <string name="comment">Comment</string>
    <string name="grave_num">Grave number</string>
    <string name="image_add">image_add</string>
    <string name="added_by">Added by:</string>
    <string name="established">Established</string>
    <string name="section">Section:</string>
    <string name="range">Range:</string>
    <string name="spot">Spot:</string>
    <string name="township">Township:</string>
    <string name="graves">Graves:</string>
    <string name="more">More</string>
    <string name="less">Less</string>
    <string name="cemetery">Cemetery</string>

    <string-array name="string_array_states">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
</resources>